...
    @Environment(\.openWindow) private var openWindow
    @Binding var currentSelectedProject: Project?
    
    var body: some View {
        HStack(spacing: 20) {
            Spacer()
            Button("Configuration", systemImage: "wrench.and.screwdriver.fill", action: setProjectConfiguration).controlSize(.regular)
            Button("Encode", systemImage: "play.circle.fill", action: encode).controlSize(.regular)
        }
        .padding(.trailing, 15)
        .frame(height: 50)
    }
    
    
...
